Include more data corrections.

--- a/Preprocess-vetting.ipynb
+++ b/Preprocess-vetting.ipynb
@@ -21,86 +21,109 @@
     "\n",
     "pd.set_option('display.max_columns', 50)\n",
     "\n",
+    "def generate_data(include_toi):\n",
+    "    tces_file = '/mnt/tess/labels/tce_bls_instar+old.csv'\n",
+    "    labels_file = '/mnt/tess/labels/labels_vetting_v1.csv'\n",
+    "    corrections_file = '/mnt/tess/labels/e_label_ephemerides.csv'\n",
     "\n",
-    "tces_file = '/mnt/tess/labels/tce_bls_instar+old.csv'\n",
-    "labels_file = '/mnt/tess/labels/labels_vetting_v1.csv'\n",
+    "    tce_table = pd.read_csv(tces_file, header=0, low_memory=False).set_index('tic_id')\n",
+    "    tce_table = tce_table.drop(columns=['Unnamed: 0'])\n",
+    "    tce_table['Duration'] /= 24.0\n",
     "\n",
+    "    joined_table = tce_table\n",
+    "    \n",
+    "    corrections_table = pd.read_csv(corrections_file, header=0, low_memory=False);\n",
+    "    corrections_table['tic_id'] = corrections_table['tic']\n",
+    "    corrections_table = corrections_table.set_index('tic_id')\n",
+    "    corrections_table['dur'] /= 24.0\n",
+    "    corrections_table['dep'] *= 1e6\n",
     "\n",
-    "tce_table = pd.read_csv(tces_file, header=0, low_memory=False).set_index('tic_id')\n",
-    "tce_table = tce_table.drop(columns=['Unnamed: 0'])\n",
-    "tce_table['Duration'] /= 24.0\n",
+    "    joined_table = joined_table.join(corrections_table, on='tic_id', how='right')\n",
+    "    joined_table['Epoc'] = joined_table['epo']\n",
+    "    joined_table['Duration'] = joined_table['dur']\n",
+    "    joined_table['Period'] = joined_table['per']\n",
+    "    joined_table['Transit_Depth'] = joined_table['dep']\n",
     "\n",
-    "joined_table = tce_table\n",
-    "\n",
-    "joined_table = joined_table.reset_index()[[\n",
-    "    'tic_id', 'RA', 'Dec', 'Tmag', 'Epoc', 'Period', 'Duration',\n",
-    "    'Transit_Depth', 'Sectors', 'star_rad', 'star_mass', 'teff',\n",
-    "    'logg', 'SN', 'Qingress'\n",
-    "]]\n",
-    "\n",
-    "\n",
-    "labels_table = pd.read_csv(labels_file, header=0, low_memory=False)\n",
-    "labels_table = labels_table.drop(columns=['261262721'])\n",
-    "labels_table['tic_id'] = labels_table['TIC ID']\n",
-    "\n",
-    "disps = ['e', 'p', 'n', 'b', 't', 'u']\n",
-    "users = ['ch', 'et', 'md', 'as', 'mk']\n",
-    "\n",
-    "for d in disps:\n",
-    "    labels_table[f'disp_{d}'] = 0\n",
-    "\n",
-    "def set_labels(row):\n",
-    "    a = ~row.isna()\n",
-    "    if a['Final']:\n",
-    "        row[f'disp_{row[\"Final\"][0]}'] = 1\n",
-    "        row[f'disp_{row[\"Final\"][1]}'] = 1\n",
-    "    else:\n",
-    "        for user in users:\n",
-    "            if a[user] and row[user]:\n",
-    "                row[f'disp_{row[user][0]}'] += 1\n",
-    "                row[f'disp_{row[user][1]}'] += 1\n",
-    "                        \n",
-    "    return row\n",
-    "\n",
-    "labels_table = labels_table.apply(set_labels, axis=1)\n",
-    "labels_table = labels_table[['tic_id', 'Split'] + [f'disp_{d}' for d in disps]]\n",
-    "\n",
-    "joined_table = joined_table.set_index('tic_id')\n",
-    "labels_table = labels_table.set_index('tic_id')\n",
-    "joined_table = joined_table.join(labels_table, on='tic_id', how='inner')\n",
+    "    joined_table = joined_table.reset_index()[[\n",
+    "        'tic_id', 'RA', 'Dec', 'Tmag', 'Epoc', 'Period', 'Duration',\n",
+    "        'Transit_Depth', 'Sectors', 'star_rad', 'star_mass', 'teff',\n",
+    "        'logg', 'SN', 'Qingress'\n",
+    "    ]]\n",
     "\n",
     "\n",
-    "toi = pd.read_csv('/mnt/tess/labels/tce_toi_vetting_processed.csv', header=0, low_memory=False).set_index('tic_id')\n",
-    "toi['Duration'] /= 24.0\n",
+    "    labels_table = pd.read_csv(labels_file, header=0, low_memory=False)\n",
+    "    labels_table = labels_table.drop(columns=['261262721'])\n",
+    "    labels_table['tic_id'] = labels_table['TIC ID']\n",
     "\n",
-    "toi['Split'] = toi.apply(lambda r: 'train' if r['rand'] < 80 else 'test', axis=1)\n",
-    "toi = toi.drop(columns=['Unnamed: 0', 'rand'])\n",
+    "    disps = ['e', 'p', 'n', 'b', 't', 'u']\n",
+    "    users = ['ch', 'et', 'md', 'as', 'mk']\n",
     "\n",
-    "# joined_table = joined_table.append(toi)\n",
+    "    for d in disps:\n",
+    "        labels_table[f'disp_{d}'] = 0\n",
+    "\n",
+    "    def set_labels(row):\n",
+    "        a = ~row.isna()\n",
+    "        if a['Final']:\n",
+    "            row[f'disp_{row[\"Final\"][0]}'] = 1\n",
+    "            row[f'disp_{row[\"Final\"][1]}'] = 1\n",
+    "        else:\n",
+    "            for user in users:\n",
+    "                if a[user] and row[user]:\n",
+    "                    row[f'disp_{row[user][0]}'] += 1\n",
+    "                    row[f'disp_{row[user][1]}'] += 1\n",
+    "\n",
+    "        return row\n",
+    "\n",
+    "    labels_table = labels_table.apply(set_labels, axis=1)\n",
+    "    labels_table = labels_table[['tic_id', 'Split'] + [f'disp_{d}' for d in disps]]\n",
+    "\n",
+    "    joined_table = joined_table.set_index('tic_id')\n",
+    "    labels_table = labels_table.set_index('tic_id')\n",
+    "    joined_table = joined_table.join(labels_table, on='tic_id', how='inner')\n",
     "\n",
     "\n",
-    "print(f'Total entries: {len(joined_table)}')\n",
-    "joined_table = joined_table[\n",
-    "    sum(joined_table[f'disp_{d}'] for d in disps) > 0\n",
-    "]\n",
-    "print(f'Total labeled entries: {len(joined_table)}')\n",
+    "    toi = pd.read_csv('/mnt/tess/labels/tce_toi_vetting_processed.csv', header=0, low_memory=False).set_index('tic_id')\n",
+    "    toi['Duration'] /= 24.0\n",
+    "\n",
+    "    toi['Split'] = toi.apply(lambda r: 'train' if r['rand'] < 80 else 'test', axis=1)\n",
+    "    toi = toi.drop(columns=['Unnamed: 0', 'rand'])\n",
+    "\n",
+    "    if include_toi:\n",
+    "        joined_table = joined_table.append(toi)\n",
     "\n",
     "\n",
-    "all_table = joined_table\n",
+    "    print(f'Total entries: {len(joined_table)}')\n",
+    "    joined_table = joined_table[\n",
+    "        sum(joined_table[f'disp_{d}'] for d in disps) > 0\n",
+    "    ]\n",
+    "    print(f'Total labeled entries: {len(joined_table)}')\n",
     "\n",
-    "t_train = joined_table[joined_table['Split'] == 'train']\n",
-    "t_val = joined_table[joined_table['Split'] == 'val']\n",
-    "t_test = joined_table[joined_table['Split'] == 'test']\n",
-    "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}; Test: {len(t_test)}')\n",
     "\n",
-    "t_train = t_train.drop(columns=['Split'])\n",
-    "t_val = t_val.drop(columns=['Split'])\n",
-    "t_test = t_test.drop(columns=['Split'])\n",
-    "all_table = all_table.drop(columns=['Split'])\n",
+    "    all_table = joined_table\n",
     "\n",
-    "# t_train.to_csv('/mnt/tess/astronet/tces-vetting-v3-train.csv')\n",
-    "# t_val.to_csv('/mnt/tess/astronet/tces-vetting-v3-val.csv')\n",
-    "# t_test.to_csv('/mnt/tess/astronet/tces-vetting-v3-test.csv')\n",
+    "    t_train = joined_table[joined_table['Split'] == 'train']\n",
+    "    t_val = joined_table[joined_table['Split'] == 'val']\n",
+    "    t_test = joined_table[joined_table['Split'] == 'test']\n",
+    "    print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}; Test: {len(t_test)}')\n",
+    "\n",
+    "    t_train = t_train.drop(columns=['Split'])\n",
+    "    t_val = t_val.drop(columns=['Split'])\n",
+    "    t_test = t_test.drop(columns=['Split'])\n",
+    "    all_table = all_table.drop(columns=['Split'])\n",
+    "    \n",
+    "    return t_train, t_val, t_test, all_table\n",
+    "\n",
+    "\n",
+    "t_train, t_val, t_test, all_table = generate_data(False)\n",
+    "# t_train.to_csv('/mnt/tess/astronet/tces-vetting-v4-toi-train.csv')\n",
+    "# t_val.to_csv('/mnt/tess/astronet/tces-vetting-v4-toi-val.csv')\n",
+    "# t_test.to_csv('/mnt/tess/astronet/tces-vetting-v4-toi-test.csv')\n",
+    "\n",
+    "# t_train, t_val, t_test, all_table = generate_data(True)\n",
+    "# t_train.to_csv('/mnt/tess/astronet/tces-vetting-v4-train.csv')\n",
+    "# t_val.to_csv('/mnt/tess/astronet/tces-vetting-v4-val.csv')\n",
+    "# t_test.to_csv('/mnt/tess/astronet/tces-vetting-v4-test.csv')\n",
+    "\n",
     "# all_table.to_csv('/mnt/tess/astronet/tces-vetting-all.csv')"
    ]
   },
