--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -102,10 +102,10 @@
     "t_test = t_test.drop(columns=['Hemisphere', 'Seed randbetween(1, 100)', 'Split'])\n",
     "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}; Test: {len(t_test)}')\n",
     "\n",
-    "t_train.to_csv('/mnt/tess/astronet/tces-v8-train.csv')\n",
-    "t_val.to_csv('/mnt/tess/astronet/tces-v8-val.csv')\n",
-    "t_test.to_csv('/mnt/tess/astronet/tces-v8-test.csv')\n",
-    "all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
+    "# t_train.to_csv('/mnt/tess/astronet/tces-v8-train.csv')\n",
+    "# t_val.to_csv('/mnt/tess/astronet/tces-v8-val.csv')\n",
+    "# t_test.to_csv('/mnt/tess/astronet/tces-v8-test.csv')\n",
+    "# all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
    ]
   },
   {
