Fix more duplications.

--- a/Data.ipynb
+++ b/Data.ipynb
@@ -10,7 +10,12 @@
     "import tensorflow as tf\n",
     "\n",
     "tces_file = '/mnt/tess/astronet/tces-v8-train.csv'\n",
-    "file_pattern = '/mnt/tess/astronet/tfrecords-vetting-3-train/*'\n",
+    "file_pattern = '/mnt/tess/astronet/tfrecords-28-train/*'\n",
+    "model_name = 'AstroCNNModel'\n",
+    "config_name = 'revised_tuned'\n",
+    "# labels = ['p', 'e', 'n']\n",
+    "labels = ['E', 'N', 'J', 'S', 'B']\n",
+    "\n",
     "filenames = tf.io.gfile.glob(file_pattern)\n",
     "    \n",
     "filenames"
@@ -84,8 +89,6 @@
    "source": [
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "# labels = ['p', 'e', 'n']\n",
-    "labels = ['E', 'N', 'J', 'S', 'B']\n",
     "counts = [sum(examples_table['disp_{}'.format(l)] > 0) for l in labels]\n",
     "ax = plt.bar(labels, counts)\n",
     "for i in range(len(labels)):\n",
@@ -95,15 +98,6 @@
     "    plt.annotate(\n",
     "        '{} - {:.0%}'.format(counts[i], counts[i] / sum(counts)),\n",
     "        (x + 0.1, y + height + 11))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "examples_table.describe()"
    ]
   },
   {
@@ -173,7 +167,7 @@
     "from astronet import models\n",
     "from astronet.astro_cnn_model import input_ds\n",
     "\n",
-    "config = models.get_model_config('AstroCNNModel', 'revised_tuned')\n",
+    "config = models.get_model_config(model_name, config_name)\n",
     "\n",
     "ds = input_ds.build_dataset(\n",
     "      file_pattern=file_pattern,\n",
@@ -250,8 +244,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tic_id = 77156829\n",
-    "plot_ds_tce(ds, tic_id)\n",
+    "tic_id = 177308777\n",
+    "# plot_ds_tce(ds, tic_id)\n",
     "tce_table[tce_table['tic_id'] == tic_id]"
    ]
   },
@@ -263,9 +257,9 @@
    },
    "outputs": [],
    "source": [
-    "tce = find_tce(158170594)\n",
+    "# tce = find_tce(77156829)\n",
     "\n",
-    "list(tce.features.feature.keys())"
+    "# list(tce.features.feature.keys())"
    ]
   }
  ],
