--- a/Preprocess-vetting.ipynb
+++ b/Preprocess-vetting.ipynb
@@ -105,6 +105,7 @@
     "    t_val = joined_table[joined_table['Split'] == 'val']\n",
     "    t_test = joined_table[joined_table['Split'] == 'test']\n",
     "    print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}; Test: {len(t_test)}')\n",
+    "    print(f'Duplicate TICs: {len(all_table.index.values) - len(set(all_table.index.values))}')\n",
     "\n",
     "    t_train = t_train.drop(columns=['Split'])\n",
     "    t_val = t_val.drop(columns=['Split'])\n",
@@ -114,17 +115,17 @@
     "    return t_train, t_val, t_test, all_table\n",
     "\n",
     "\n",
+    "t_train, t_val, t_test, all_table = generate_data(True)\n",
+    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v4-toi-train.csv')\n",
+    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v4-toi-val.csv')\n",
+    "t_test.to_csv('/mnt/tess/astronet/tces-vetting-v4-toi-test.csv')\n",
+    "\n",
     "t_train, t_val, t_test, all_table = generate_data(False)\n",
-    "# t_train.to_csv('/mnt/tess/astronet/tces-vetting-v4-toi-train.csv')\n",
-    "# t_val.to_csv('/mnt/tess/astronet/tces-vetting-v4-toi-val.csv')\n",
-    "# t_test.to_csv('/mnt/tess/astronet/tces-vetting-v4-toi-test.csv')\n",
+    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v4-train.csv')\n",
+    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v4-val.csv')\n",
+    "t_test.to_csv('/mnt/tess/astronet/tces-vetting-v4-test.csv')\n",
     "\n",
-    "# t_train, t_val, t_test, all_table = generate_data(True)\n",
-    "# t_train.to_csv('/mnt/tess/astronet/tces-vetting-v4-train.csv')\n",
-    "# t_val.to_csv('/mnt/tess/astronet/tces-vetting-v4-val.csv')\n",
-    "# t_test.to_csv('/mnt/tess/astronet/tces-vetting-v4-test.csv')\n",
-    "\n",
-    "# all_table.to_csv('/mnt/tess/astronet/tces-vetting-all.csv')"
+    "all_table.to_csv('/mnt/tess/astronet/tces-vetting-all.csv')"
    ]
   },
   {
