--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -74,12 +74,20 @@
     "labels_table = labels_table[labels_table['Needs review'] != '!']\n",
     "labels_table['tic_id'] = labels_table['TIC ID']\n",
     "labels_table = labels_table.apply(set_labels, axis=1)\n",
-    "\n",
     "labels_table = labels_table[['tic_id'] + [f'disp_{d}' for d in disps]]\n",
     "\n",
     "\n",
-    "joined_table = joined_table.set_index('tic_id')\n",
+    "splits_table = pd.read_csv(splits_file, header=0, low_memory=False)\n",
+    "labels_table = labels_table.join(splits_table, how='inner')\n",
+    "Y12_tics = set(labels_table[labels_table.Hemisphere != 'Y3']['TIC ID'].values)\n",
+    "Y3_tics = set(labels_table[labels_table.Hemisphere == 'Y3']['TIC ID'].values)\n",
+    "labels_table = labels_table[\n",
+    "    (labels_table['TIC ID'].isin(Y3_tics) & (labels_table.Hemisphere == 'Y3'))\n",
+    "    | (labels_table['TIC ID'].isin(Y12_tics - Y3_tics) & (labels_table.Hemisphere != 'Y3'))]\n",
+    "\n",
+    "\n",
     "labels_table = labels_table.set_index('tic_id')\n",
+    "joined_table = joined_table.set_index('tic_id')\n",
     "joined_table = joined_table.join(labels_table, on='tic_id', how='inner')\n",
     "print(f'Total entries: {len(joined_table)}')\n",
     "joined_table = joined_table[\n",
@@ -89,23 +97,20 @@
     "\n",
     "\n",
     "all_table = joined_table\n",
-    "splits_table = pd.read_csv(splits_file, header=0, low_memory=False)\n",
-    "splits_table['tic_id'] = splits_table['TIC ID']\n",
-    "splits_table = splits_table.set_index('tic_id')\n",
-    "joined_table = joined_table.join(splits_table, on='tic_id', how='inner')\n",
     "\n",
     "t_train = joined_table[joined_table['Split'] == 'train']\n",
     "t_val = joined_table[joined_table['Split'] == 'val']\n",
     "t_test = joined_table[joined_table['Split'] == 'test']\n",
-    "t_train = t_train.drop(columns=['Hemisphere', 'Seed randbetween(1, 100)', 'Split'])\n",
-    "t_val = t_val.drop(columns=['Hemisphere', 'Seed randbetween(1, 100)', 'Split'])\n",
-    "t_test = t_test.drop(columns=['Hemisphere', 'Seed randbetween(1, 100)', 'Split'])\n",
+    "t_train = t_train.drop(columns=['Hemisphere', 'Seed randbetween(1, 100)', 'Split', 'TIC ID'])\n",
+    "t_val = t_val.drop(columns=['Hemisphere', 'Seed randbetween(1, 100)', 'Split', 'TIC ID'])\n",
+    "t_test = t_test.drop(columns=['Hemisphere', 'Seed randbetween(1, 100)', 'Split', 'TIC ID'])\n",
     "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}; Test: {len(t_test)}')\n",
+    "print(f'Duplicate TICs: {len(all_table.index.values) - len(set(all_table.index.values))}')\n",
     "\n",
     "# t_train.to_csv('/mnt/tess/astronet/tces-v8-train.csv')\n",
     "# t_val.to_csv('/mnt/tess/astronet/tces-v8-val.csv')\n",
     "# t_test.to_csv('/mnt/tess/astronet/tces-v8-test.csv')\n",
-    "# all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
+    "all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
    ]
   },
   {
