--- a/Data.ipynb
+++ b/Data.ipynb
@@ -9,12 +9,14 @@
     "import os\n",
     "import tensorflow as tf\n",
     "\n",
-    "tces_file = '/mnt/tess/astronet/tces-v8-train.csv'\n",
-    "file_pattern = '/mnt/tess/astronet/tfrecords-28-train/*'\n",
-    "model_name = 'AstroCNNModel'\n",
-    "config_name = 'revised_tuned'\n",
-    "# labels = ['p', 'e', 'n']\n",
-    "labels = ['E', 'N', 'J', 'S', 'B']\n",
+    "tces_file = '/mnt/tess/astronet/tces-vetting-v4-toi-train.csv'\n",
+    "file_pattern = '/mnt/tess/astronet/tfrecords-vetting-4-toi-train/*'\n",
+    "model_name = 'AstroCNNModelVetting'\n",
+    "config_name = 'vrevised'\n",
+    "labels = ['p', 'e', 'n']\n",
+    "# model_name = 'AstroCNNModel'\n",
+    "# config_name = 'revised_tuned'\n",
+    "# labels = ['E', 'N', 'J', 'S', 'B']\n",
     "\n",
     "filenames = tf.io.gfile.glob(file_pattern)\n",
     "    \n",
@@ -244,9 +246,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tic_id = 177308777\n",
+    "tic_id = 237320326\n",
     "# plot_ds_tce(ds, tic_id)\n",
-    "tce_table[tce_table['tic_id'] == tic_id]"
+    "tce_table[tce_table['tic_id'] == tic_id]\n",
+    "examples_table[examples_table['tic_id'] == tic_id]"
    ]
   },
   {
