--- a/Tune.ipynb
+++ b/Tune.ipynb
@@ -68,7 +68,7 @@
     "resp = client.projects().locations().studies().list(parent=tune.study_parent()).execute()\n",
     "studies = pd.DataFrame(resp['studies'])\n",
     "studies = studies.sort_values('createTime', ascending=False)\n",
-    "studies.head(5)"
+    "studies.head(10)"
    ]
   },
   {
@@ -88,6 +88,9 @@
     "for trial in resp['trials']:\n",
     "  if 'finalMeasurement' not in trial:\n",
     "    continue\n",
+    "    \n",
+    "  if 'value' not in trial['finalMeasurement']['metrics'][0]:\n",
+    "    continue\n",
     "\n",
     "  loss, = (m['value'] for m in trial['finalMeasurement']['metrics'] if m['metric'] == 'loss')  \n",
     "  \n",
@@ -95,7 +98,8 @@
     "  metrics_loss.append(loss)\n",
     "  trial_ids.append(int(trial['name'].split('/')[-1]))\n",
     "  \n",
-    "print(max(trial_ids), 'valid studies')"
+    "print(max(trial_ids), 'total studies')\n",
+    "print(len(trial_ids), 'valid studies')"
    ]
   },
   {
@@ -111,14 +115,14 @@
     "matplotlib.rcParams.update({'font.size': 16})\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "ax.plot(np.minimum(metrics_loss, 0.5))\n",
+    "ax.plot(trial_ids, np.minimum(metrics_loss, 0.5))\n",
     "plt.xlabel(\"validation loss\")\n",
     "sorted_metrics = sorted(metrics_loss, reverse=True)\n",
     "\n",
     "best = 0\n",
     "for i, trial_id in enumerate(trial_ids):\n",
     "  if (metrics_loss[i] <= sorted_metrics[-5]):\n",
-    "    print(i, metrics_loss[i])\n",
+    "    print(trial_ids[i], metrics_loss[i])\n",
     "  if (metrics_loss[i] <= metrics_loss[best]):\n",
     "    best = i\n",
     "\n",
@@ -173,7 +177,7 @@
    "metadata": {},
    "source": [
     "```\n",
-    "python astronet/tune.py --model=AstroCNNModel --config_name=revised --train_files=/mnt/tess/astronet/tfrecords-27-train/* --eval_files=/mnt/tess/astronet/tfrecords-27-val/* --train_steps=100 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=2_revised_1\n",
+    "python astronet/tune.py --model=AstroCNNModel --config_name=revised --train_files=/mnt/tess/astronet/tfrecords-28-train/* --eval_files=/mnt/tess/astronet/tfrecords-28-val/* --train_steps=100 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=4_revised_1c\n",
     "```"
    ]
   }
