--- a/Tune-vetting.ipynb
+++ b/Tune-vetting.ipynb
@@ -37,7 +37,7 @@
     "from astronet import tune_vetting\n",
     "from astronet import train\n",
     "\n",
-    "config_name = 'base'\n",
+    "config_name = 'vrevised'\n",
     "\n",
     "tune_vetting.FLAGS = tune_vetting.parser.parse_args([\n",
     "  '--client_secrets', '../client_secrets.json',\n",
@@ -176,7 +176,7 @@
    "metadata": {},
    "source": [
     "```\n",
-    "python astronet/tune_vetting.py --model=AstroCNNModelVetting --config_name=revised --train_files=/mnt/tess/astronet/tfrecords-vetting-3-train/* --eval_files=/mnt/tess/astronet/tfrecords-vetting-3-val/* --pretrain_model_dir=/mnt/tess/astronet/checkpoints/extended_27_run_20 --train_steps=12000 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=1_vet_revised_1\n",
+    "python astronet/tune_vetting.py --model=AstroCNNModelVetting --config_name=vrevised --train_files=/mnt/tess/astronet/tfrecords-vetting-4-toi-train/* --eval_files=/mnt/tess/astronet/tfrecords-vetting-4-toi-val/* --pretrain_model_dir=/mnt/tess/astronet/checkpoints/revised_tuned_27_run_1 --train_steps=0 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=4_vrevised_1d\n",
     "```"
    ]
   }
