Add local odd/even mask view, set config for new runs.

--- a/Lightcurve.ipynb
+++ b/Lightcurve.ipynb
@@ -30,7 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_all(279021812,\n",
+    "plot_all(114819776,\n",
     "#          rpt_only=True,\n",
     "#          large=True,\n",
     "#          bkspace=5.0,\n",
@@ -39,7 +39,7 @@
     "#          abs_xlim=(1300, 2500),\n",
     "#          abs_ylim='3%',\n",
     "#          abs_ylim=(0.975, 1.01),\n",
-    "#          item_no=5\n",
+    "#          item_no=1\n",
     "        )"
    ]
   },
@@ -87,6 +87,8 @@
     "            tce = tce[tce.index == tce.index.values[item_no]]\n",
     "            if 'Source' in tce:\n",
     "                print('Source:', 'BLS' if tce.Source.values.item() == 2 else 'TEV')\n",
+    "            else:\n",
+    "                print('WARNING: duplicate TCE record')\n",
     "        return tce, f\n",
     "    raise ValueError(f'no TCE data for {tic}')\n",
     "\n",
