--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -104,6 +104,7 @@
     "t_train = t_train.drop(columns=['Hemisphere', 'Seed randbetween(1, 100)', 'Split', 'TIC ID'])\n",
     "t_val = t_val.drop(columns=['Hemisphere', 'Seed randbetween(1, 100)', 'Split', 'TIC ID'])\n",
     "t_test = t_test.drop(columns=['Hemisphere', 'Seed randbetween(1, 100)', 'Split', 'TIC ID'])\n",
+    "all_table = all_table.drop(columns=['Hemisphere', 'Seed randbetween(1, 100)', 'Split', 'TIC ID'])\n",
     "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}; Test: {len(t_test)}')\n",
     "print(f'Duplicate TICs: {len(all_table.index.values) - len(set(all_table.index.values))}')\n",
     "\n",
