--- a/Tune-vetting.ipynb
+++ b/Tune-vetting.ipynb
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = studies['name'][0]\n",
+    "study = studies['name'][1]\n",
     "study_id = '{}/studies/{}'.format(tune_vetting.study_parent(), study.split('/')[-1])\n",
     "print(study_id)\n",
     "resp = client.projects().locations().studies().trials().list(\n",
@@ -176,7 +176,7 @@
    "metadata": {},
    "source": [
     "```\n",
-    "python astronet/tune_vetting.py --model=AstroCNNModelVetting --config_name=vrevised --train_files=/mnt/tess/astronet/tfrecords-vetting-4-toi-train/* --eval_files=/mnt/tess/astronet/tfrecords-vetting-4-toi-val/* --pretrain_model_dir=/mnt/tess/astronet/checkpoints/revised_tuned_27_run_1 --train_steps=0 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=4_vrevised_1d\n",
+    "python astronet/tune_vetting.py --model=AstroCNNModelVetting --config_name=vrevised --train_files=/mnt/tess/astronet/tfrecords-vetting-5-toi-train/* --eval_files=/mnt/tess/astronet/tfrecords-vetting-5-toi-val/* --pretrain_model_dir=/mnt/tess/astronet/checkpoints/revised_tuned_30_run_1 --train_steps=0 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=5_vrevised_1\n",
     "```"
    ]
   }
