--- a/Tune.ipynb
+++ b/Tune.ipynb
@@ -177,7 +177,7 @@
    "metadata": {},
    "source": [
     "```\n",
-    "python astronet/tune.py --model=AstroCNNModel --config_name=revised --train_files=/mnt/tess/astronet/tfrecords-28-train/* --eval_files=/mnt/tess/astronet/tfrecords-28-val/* --train_steps=100 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=4_revised_1c\n",
+    "python astronet/tune.py --model=AstroCNNModel --config_name=revised --train_files=/mnt/tess/astronet/tfrecords-30-train/* --eval_files=/mnt/tess/astronet/tfrecords-30-val/* --train_steps=0 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=30_revised_1\n",
     "```"
    ]
   }
