--- a/Lightcurve-vetting.ipynb
+++ b/Lightcurve-vetting.ipynb
@@ -30,7 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_all(278866211,\n",
+    "plot_all(119774374,\n",
     "#          rpt_only=True,\n",
     "#          large=True,\n",
     "#          bkspace=5.0,\n",
@@ -112,7 +112,7 @@
     "    n = plt.get_cmap('tab20')(8)\n",
     "    k = plt.get_cmap('tab20')(14)\n",
     "\n",
-    "    plotrows = 11\n",
+    "    plotrows = 7\n",
     "    plotcols = 3\n",
     "    \n",
     "    if large:\n",
@@ -232,15 +232,19 @@
     "    ex = generate_input_records._process_tce(row, bkspace)\n",
     "    \n",
     "    \n",
-    "    def plot_w_scatter(view, std, title, mask=None):\n",
+    "    def plot_w_scatter(view, std, title, mask=None, mask_is_filter=False):\n",
     "        splt()\n",
     "        view = np.array(ex.features.feature[view].float_list.value)\n",
     "        std = np.array(ex.features.feature[std].float_list.value)\n",
+    "        if mask:\n",
+    "            msk = -np.array(ex.features.feature[mask].float_list.value)\n",
+    "            if mask_is_filter:\n",
+    "                view = view[msk < 0]\n",
+    "                std = std[msk < 0]\n",
     "        plt.plot(std, color=o)\n",
     "        plt.plot(view, color=n)\n",
     "        if mask:\n",
-    "            plt.plot(\n",
-    "                -np.array(ex.features.feature[mask].float_list.value), color=r, alpha=0.5, linestyle='--')\n",
+    "            plt.plot(msk, color=r, alpha=0.5, linestyle='--')\n",
     "        plt.title(title)\n",
     "        \n",
     "    def plot_norm(view, title):\n",
@@ -250,10 +254,10 @@
     "        plt.title(title)    \n",
     "        \n",
     "        \n",
-    "    def plot_segments(view, tag):\n",
+    "    def plot_segments(view, tag, num_chans=14, min_chans=None, max_chans=None):\n",
     "        splt(c=3)\n",
     "        img = ex.features.feature[view].float_list.value\n",
-    "        img = np.reshape(img, (-1, 14))\n",
+    "        img = np.reshape(img, (-1, num_chans))[:, min_chans:max_chans]\n",
     "        n_transits = img.shape[1] // 2\n",
     "        for i in range(n_transits):\n",
     "            view = img[:, 2 * i]\n",
@@ -261,6 +265,15 @@
     "            plt.plot(np.where(mask, view, np.nan), marker='.')\n",
     "        plt.title(f'{n_transits} sample segments, densest first, ties broken at random {tag}')\n",
     "        \n",
+    "    splt()\n",
+    "    plt.plot(ex.features.feature['local_aperture_s'].float_list.value, label='small')\n",
+    "    plt.plot(ex.features.feature['local_aperture_m'].float_list.value, label='med')\n",
+    "    plt.plot(ex.features.feature['local_aperture_l'].float_list.value, label='large')\n",
+    "    plt.title('multi-aperture')\n",
+    "    plt.legend()\n",
+    "    \n",
+    "    splt()\n",
+    "\n",
     "    plot_w_scatter('global_view_0.3', 'global_std_0.3', 'global @ 0.3')\n",
     "    plot_w_scatter('global_view_5.0', 'global_std_5.0', 'global @ 5.0')\n",
     "\n",
@@ -270,39 +283,14 @@
     "    plot_w_scatter('global_view', 'global_std', 'global', 'global_transit_mask')\n",
     "    plot_w_scatter('local_view', 'local_std', f'local / {loc_scale:0.3}')\n",
     "    plot_w_scatter('secondary_view', 'secondary_std', f'secondary ({sec_phase:0.2}) / {sec_scale:0.5}')\n",
-    "    plot_w_scatter('global_view_half_period', 'global_view_half_period_std', 'global half period')\n",
-    "    plot_w_scatter('global_view_double_period', 'global_view_double_period_std', 'global double period (shifted)')\n",
+    "    plot_w_scatter('local_view_half_period', 'local_view_half_period_std', 'local half period')\n",
+    "    plot_w_scatter('local_view_even', 'local_std_even', 'local even', 'local_mask_even', True)\n",
+    "    plot_w_scatter('local_view_odd', 'local_std_odd', 'local odd', 'local_mask_odd', True)\n",
     "    \n",
     "    splt()\n",
-    "    plt.plot(ex.features.feature['local_aperture_s'].float_list.value, label='small')\n",
-    "    plt.plot(ex.features.feature['local_aperture_m'].float_list.value, label='med')\n",
-    "    plt.plot(ex.features.feature['local_aperture_l'].float_list.value, label='large')\n",
-    "    plt.title('multi-aperture')\n",
-    "    plt.legend()\n",
     "\n",
-    "    plot_segments('sample_segments_view', '')\n",
-    "\n",
-    "    sec_phase = ex.features.feature['secondary_phase_0.3'].float_list.value[0]\n",
-    "    loc_scale = ex.features.feature['local_scale_0.3'].float_list.value[0]\n",
-    "    sec_scale = ex.features.feature['secondary_scale_0.3'].float_list.value[0]\n",
-    "    plot_w_scatter('global_view_0.3', 'global_std_0.3', 'global @ 0.3', 'global_transit_mask_0.3')\n",
-    "    plot_w_scatter('local_view_0.3', 'local_std_0.3', f'local @ 0.3 / {loc_scale:0.3}')\n",
-    "    plot_w_scatter('secondary_view_0.3', 'secondary_std_0.3', f'secondary @ 0.3 ({sec_phase:0.2}) / {sec_scale:0.5}')\n",
-    "    plot_w_scatter('global_view_half_period_0.3', 'global_view_half_period_std_0.3', 'global half period @ 0.3')\n",
-    "    plot_norm('global_view_double_period_0.3', 'global double period (shifted) @ 0.3')\n",
-    "    splt()\n",
-    "    plot_segments('sample_segments_view_0.3', ' @ 0.3')\n",
-    "\n",
-    "    sec_phase = ex.features.feature['secondary_phase_5.0'].float_list.value[0]\n",
-    "    loc_scale = ex.features.feature['local_scale_5.0'].float_list.value[0]\n",
-    "    sec_scale = ex.features.feature['secondary_scale_5.0'].float_list.value[0]\n",
-    "    plot_w_scatter('global_view_5.0', 'global_std_5.0', 'global @ 5.0', 'global_transit_mask_5.0')\n",
-    "    plot_w_scatter('local_view_5.0', 'local_std_5.0', f'local @ 5.0 / {loc_scale:0.3}')\n",
-    "    plot_w_scatter('secondary_view_5.0', 'secondary_std_5.0', f'secondary @ 5.0 ({sec_phase:0.2}) / {sec_scale:0.5}')\n",
-    "    plot_w_scatter('global_view_half_period_5.0', 'global_view_half_period_std_5.0', 'global half period @ 5.0')\n",
-    "    plot_norm('global_view_double_period_5.0', 'global double period (shifted) @ 5.0')\n",
-    "    splt()\n",
-    "    plot_segments('sample_segments_view_5.0', ' @ 5.0')\n"
+    "    plot_segments('sample_segments_local_view', 'odd', num_chans=16, min_chans=0, max_chans=8)\n",
+    "    plot_segments('sample_segments_local_view', 'even', num_chans=16, min_chans=8, max_chans=16)\n"
    ]
   }
  ],
