Minor config updates.

--- a/Data.ipynb
+++ b/Data.ipynb
@@ -10,12 +10,12 @@
     "import tensorflow as tf\n",
     "\n",
     "tces_file = '/mnt/tess/astronet/tces-vetting-v4-toi-train.csv'\n",
-    "file_pattern = '/mnt/tess/astronet/tfrecords-vetting-4-toi-train/*'\n",
+    "file_pattern = '/mnt/tess/astronet/tfrecords-vetting-5-toi-train/*'\n",
     "model_name = 'AstroCNNModelVetting'\n",
     "config_name = 'vrevised'\n",
     "labels = ['p', 'e', 'n']\n",
     "# model_name = 'AstroCNNModel'\n",
-    "# config_name = 'revised_tuned'\n",
+    "# config_name = 'revised'\n",
     "# labels = ['E', 'N', 'J', 'S', 'B']\n",
     "\n",
     "filenames = tf.io.gfile.glob(file_pattern)\n",
@@ -149,7 +149,7 @@
     "        if (ex.features.feature[\"tic_id\"].int64_list.value[0] == tic_id):\n",
     "          print('TIC ID:', tic_id)\n",
     "          for l in labels:\n",
-    "              print(f'{l}:', ex.features.feature[\"disp_{l}\"].int64_list.value[0])\n",
+    "              print(f'{l}:', ex.features.feature[f\"disp_{l}\"].int64_list.value[0])\n",
     "          print('Duration:', ex.features.feature[\"Duration\"].float_list.value[0])\n",
     "          return ex\n",
     "\n",
@@ -224,6 +224,8 @@
     "                    continue\n",
     "                if k.startswith('secondary_'):\n",
     "                    continue\n",
+    "                if k.startswith('sample_'):\n",
+    "                    continue\n",
     "                print(f'{k:25}: {v.numpy()}')\n",
     "            global_view = np.array(d[0]['global_view'][0].numpy())\n",
     "            local_view = np.array(d[0]['local_view'][0].numpy())\n",
@@ -246,10 +248,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tic_id = 237320326\n",
-    "# plot_ds_tce(ds, tic_id)\n",
+    "tic_id = 368435330\n",
+    "plot_ds_tce(ds, tic_id)\n",
     "tce_table[tce_table['tic_id'] == tic_id]\n",
     "examples_table[examples_table['tic_id'] == tic_id]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls /mnt/tess/lc-v | grep 237320326"
    ]
   },
   {
@@ -260,9 +271,9 @@
    },
    "outputs": [],
    "source": [
-    "# tce = find_tce(77156829)\n",
+    "tce = find_tce(368435330)\n",
     "\n",
-    "# list(tce.features.feature.keys())"
+    "list(tce.features.feature.keys())"
    ]
   }
  ],
