Add test config.

--- a/Train.ipynb
+++ b/Train.ipynb
@@ -18,11 +18,11 @@
     "    train.FLAGS = train.parser.parse_args([\n",
     "      '--model', model_name,\n",
     "      '--config_name', config_name,\n",
-    "      '--train_files', '/mnt/tess/astronet/tfrecords-27-train/*',\n",
-    "      '--eval_files', '/mnt/tess/astronet/tfrecords-27-val/*',\n",
+    "      '--train_files', '/mnt/tess/astronet/tfrecords-30-train/*',\n",
+    "      '--eval_files', '/mnt/tess/astronet/tfrecords-30-val/*',\n",
     "      '--model_dir', '',\n",
-    "      '--train_epochs', '5',\n",
-    "      '--train_steps', '0'\n",
+    "      '--train_epochs', '1',\n",
+    "      '--train_steps', '1'\n",
     "    ])\n",
     "\n",
     "    config = models.get_model_config(model_name, config_name)\n",
@@ -31,8 +31,10 @@
     "    model = model_class(config)\n",
     "    \n",
     "    train.train(model, config)\n",
+    "    return model\n",
     "\n",
-    "m = run_training()"
+    "m = run_training()\n",
+    "m.summary()"
    ]
   }
  ],
