--- a/Tune.ipynb
+++ b/Tune.ipynb
@@ -130,6 +130,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Best so far: `projects/mdan-playground/locations/us-central1/studies/30_revised_1c_revised` (33 - 0.046386852860450745)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
