--- a/Lightcurve-vetting.ipynb
+++ b/Lightcurve-vetting.ipynb
@@ -93,6 +93,7 @@
     "             abs_ylim=None,\n",
     "             item_no=0):\n",
     "    tess_data_dir = '/mnt/tess/lc-v'\n",
+    "    reports_dir = f'/mnt/tess/rpt/png-v'\n",
     "\n",
     "    tce, tces_file = get_tce(tic, item_no)\n",
     "    generate_input_records.FLAGS = generate_input_records.parser.parse_args([\n",
@@ -231,6 +232,13 @@
     "\n",
     "    ex = generate_input_records._process_tce(row, bkspace)\n",
     "    \n",
+    "    if ex.features.feature['star_rad_present'].int64_list.value[0] > 0:\n",
+    "        print(f'star_rad: {ex.features.feature[\"star_rad\"].float_list.value[0]}')\n",
+    "    else:\n",
+    "        print('no star_rad')\n",
+    "    print(f'Transit_Depth: {ex.features.feature[\"Transit_Depth\"].float_list.value[0]}')\n",
+    "    print(f'local_scale: {ex.features.feature[\"local_scale\"].float_list.value[0]}')\n",
+    "    \n",
     "    \n",
     "    def plot_w_scatter(view, std, title, mask=None, mask_is_filter=False):\n",
     "        splt()\n",
@@ -290,7 +298,22 @@
     "    splt()\n",
     "\n",
     "    plot_segments('sample_segments_local_view', 'odd', num_chans=16, min_chans=0, max_chans=8)\n",
-    "    plot_segments('sample_segments_local_view', 'even', num_chans=16, min_chans=8, max_chans=16)\n"
+    "    plot_segments('sample_segments_local_view', 'even', num_chans=16, min_chans=8, max_chans=16)\n",
+    "\n",
+    "    try:\n",
+    "        im = plt.imread(f'{reports_dir}/{tic}.page1.png')\n",
+    "        plt.figure(figsize=(12, 8), dpi=dpi)\n",
+    "        plt.axis('off')\n",
+    "        _ = plt.imshow(im)\n",
+    "        try:\n",
+    "            im = plt.imread(f'{reports_dir}/{tic}.page3.png')\n",
+    "            plt.figure(figsize=(12, 8), dpi=dpi)\n",
+    "            plt.axis('off')\n",
+    "            _ = plt.imshow(im)\n",
+    "        except FileNotFoundError:\n",
+    "            print('-- no page 3 --')\n",
+    "    except FileNotFoundError:\n",
+    "        print('-- no report file --')\n"
    ]
   }
  ],
