Clean up configuration. Fix preprocessing bug.

--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -24,6 +24,10 @@
     "ext_data_file = '/mnt/tess/labels/ext_mast_data.csv'\n",
     "labels_file = '/mnt/tess/labels/labels_v8.csv'\n",
     "splits_file = '/mnt/tess/labels/splits_v4.csv'\n",
+    "filter_unreviewed = True\n",
+    "\n",
+    "# labels_file = '/mnt/tess/labels/labels_v9unfiltered.csv'\n",
+    "# filter_unreviewed = False\n",
     "\n",
     "\n",
     "tce_table = pd.read_csv(tces_file, header=0, low_memory=False).set_index('tic_id')\n",
@@ -71,7 +75,8 @@
     "                        \n",
     "    return row\n",
     "\n",
-    "labels_table = labels_table[labels_table['Needs review'] != '!']\n",
+    "if filter_unreviewed:\n",
+    "    labels_table = labels_table[labels_table['Needs review'] != '!']\n",
     "labels_table['tic_id'] = labels_table['TIC ID']\n",
     "labels_table = labels_table.apply(set_labels, axis=1)\n",
     "labels_table = labels_table[['tic_id'] + [f'disp_{d}' for d in disps]]\n",
@@ -237,6 +242,8 @@
     "    tcenew['SN'] = tcenew['star_rad']\n",
     "    tcenew['Qingress'] = tcenew['star_rad']\n",
     "    tcenew['Ilabel'] = tcenew['instar']\n",
+    "        \n",
+    "    actual_eph = actual_eph.set_index('tic_id')\n",
     "    \n",
     "    tcenew = tcenew.join(actual_eph, how='inner', on='tic_id', rsuffix='_eph')\n",
     "    tcenew['Epoc'] = tcenew['epo']\n",
