--- a/Preprocess-vetting.ipynb
+++ b/Preprocess-vetting.ipynb
@@ -85,7 +85,7 @@
     "    toi = pd.read_csv('/mnt/tess/labels/tce_toi_vetting_processed.csv', header=0, low_memory=False).set_index('tic_id')\n",
     "    toi['Duration'] /= 24.0\n",
     "\n",
-    "    toi['Split'] = toi.apply(lambda r: 'train' if r['rand'] < 80 else 'test', axis=1)\n",
+    "    toi['Split'] = toi.apply(lambda r: 'train' if r['rand'] < 80 else 'test'if r['rand'] >= 90 else 'val', axis=1)\n",
     "    toi = toi.drop(columns=['Unnamed: 0', 'rand'])\n",
     "\n",
     "    if include_toi:\n",
@@ -116,14 +116,14 @@
     "\n",
     "\n",
     "t_train, t_val, t_test, all_table = generate_data(True)\n",
-    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v4-toi-train.csv')\n",
-    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v4-toi-val.csv')\n",
-    "t_test.to_csv('/mnt/tess/astronet/tces-vetting-v4-toi-test.csv')\n",
+    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v5-toi-train.csv')\n",
+    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v5-toi-val.csv')\n",
+    "t_test.to_csv('/mnt/tess/astronet/tces-vetting-v5-toi-test.csv')\n",
     "\n",
     "t_train, t_val, t_test, all_table = generate_data(False)\n",
-    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v4-train.csv')\n",
-    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v4-val.csv')\n",
-    "t_test.to_csv('/mnt/tess/astronet/tces-vetting-v4-test.csv')\n",
+    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v5-train.csv')\n",
+    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v5-val.csv')\n",
+    "t_test.to_csv('/mnt/tess/astronet/tces-vetting-v5-test.csv')\n",
     "\n",
     "all_table.to_csv('/mnt/tess/astronet/tces-vetting-all.csv')"
    ]
