--- a/Preprocess-vetting.ipynb
+++ b/Preprocess-vetting.ipynb
@@ -116,16 +116,16 @@
     "\n",
     "\n",
     "t_train, t_val, t_test, all_table = generate_data(True)\n",
-    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v5-toi-train.csv')\n",
-    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v5-toi-val.csv')\n",
-    "t_test.to_csv('/mnt/tess/astronet/tces-vetting-v5-toi-test.csv')\n",
+    "# t_train.to_csv('/mnt/tess/astronet/tces-vetting-v5-toi-train.csv')\n",
+    "# t_val.to_csv('/mnt/tess/astronet/tces-vetting-v5-toi-val.csv')\n",
+    "# t_test.to_csv('/mnt/tess/astronet/tces-vetting-v5-toi-test.csv')\n",
     "\n",
     "t_train, t_val, t_test, all_table = generate_data(False)\n",
-    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v5-train.csv')\n",
-    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v5-val.csv')\n",
-    "t_test.to_csv('/mnt/tess/astronet/tces-vetting-v5-test.csv')\n",
+    "# t_train.to_csv('/mnt/tess/astronet/tces-vetting-v5-train.csv')\n",
+    "# t_val.to_csv('/mnt/tess/astronet/tces-vetting-v5-val.csv')\n",
+    "# t_test.to_csv('/mnt/tess/astronet/tces-vetting-v5-test.csv')\n",
     "\n",
-    "all_table.to_csv('/mnt/tess/astronet/tces-vetting-all.csv')"
+    "# all_table.to_csv('/mnt/tess/astronet/tces-vetting-all.csv')"
    ]
   },
   {
