Update tuning config.

--- a/Tune-vetting.ipynb
+++ b/Tune-vetting.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Best so far: `projects/mdan-playground/locations/us-central1/studies/4_vrevised_1_vrevised` (89 - 0.0820508822798729)"
+    "Best so far: `projects/mdan-playground/locations/us-central1/studies/6_vrevised_1b_vrevised` (306 0.11842478811740875)"
    ]
   },
   {
@@ -160,15 +160,15 @@
    "metadata": {},
    "source": [
     "```\n",
-    "python astronet/tune_vetting.py --model=AstroCNNModelVetting --config_name=vrevised --train_files=/mnt/tess/astronet/tfrecords-vetting-5-toi-train/* --eval_files=/mnt/tess/astronet/tfrecords-vetting-5-toi-val/* --pretrain_model_dir=/mnt/tess/astronet/checkpoints/revised_tuned_30_run_1 --train_steps=0 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=5_vrevised_4b\n",
+    "python astronet/tune_vetting.py --model=AstroCNNModelVetting --config_name=vrevised --train_files=/mnt/tess/astronet/tfrecords-vetting-5-toi-train/* --eval_files=/mnt/tess/astronet/tfrecords-vetting-6-toi-val/* --pretrain_model_dir=/mnt/tess/astronet/checkpoints/revised_tuned_30_run_1 --train_steps=0 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=6_vrevised_1c\n",
     "```\n",
     "\n",
     "```\n",
-    "python astronet/tune_vetting.py --model=AstroCNNModelVetting --config_name=vrevised --train_files=/mnt/tess/astronet/tfrecords-vetting-5-toi-train/* --eval_files=/mnt/tess/astronet/tfrecords-vetting-5-toi-val/* --pretrain_model_dir=/mnt/tess/astronet/checkpoints/revised_tuned_30_run_1 --train_steps=0 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=5_vrevised_4b --client_id=lab2\n",
+    "python astronet/tune_vetting.py --model=AstroCNNModelVetting --config_name=vrevised --train_files=/mnt/tess/astronet/tfrecords-vetting-5-toi-train/* --eval_files=/mnt/tess/astronet/tfrecords-vetting-6-toi-val/* --pretrain_model_dir=/mnt/tess/astronet/checkpoints/revised_tuned_30_run_1 --train_steps=0 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=6_vrevised_1c --client_id=lab2\n",
     "```\n",
     "\n",
     "```\n",
-    "python astronet/tune_vetting.py --model=AstroCNNModelVetting --config_name=vrevised --train_files=/mnt/tess/astronet/tfrecords-vetting-5-toi-train/* --eval_files=/mnt/tess/astronet/tfrecords-vetting-5-toi-val/* --pretrain_model_dir=/mnt/tess/astronet/checkpoints/revised_tuned_30_run_1 --train_steps=0 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=5_vrevised_4b --client_id=lab3\n",
+    "python astronet/tune_vetting.py --model=AstroCNNModelVetting --config_name=vrevised --train_files=/mnt/tess/astronet/tfrecords-vetting-5-toi-train/* --eval_files=/mnt/tess/astronet/tfrecords-vetting-6-toi-val/* --pretrain_model_dir=/mnt/tess/astronet/checkpoints/revised_tuned_30_run_1 --train_steps=0 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=6_vrevised_1c --client_id=lab3\n",
     "```"
    ]
   }
